plugins {
	id 'org.springframework.boot' version '2.5.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.github.yourlist'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

// log4j2
ext['log4j2.version'] = '2.17.0'

// logback
ext['logback.version'] = '1.2.9'

dependencies {
	//spring
	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.5'

	//lombok
	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'

	//vavr
	implementation 'io.vavr:vavr:0.10.4'
	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation  'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation  'io.jsonwebtoken:jjwt-jackson:0.11.2'
	
	//db
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
	runtimeOnly 'com.h2database:h2:1.4.200'

	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//vavr
	implementation "io.vavr:vavr:0.10.4"

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
	testImplementation 'org.hamcrest:hamcrest:2.2'
	testImplementation 'org.springframework.security:spring-security-test:5.5.1'
}

test {
	useJUnitPlatform()
}
